# place_recognition

./: CMakeLists.txt  package.xml
include/: PlaceRecognizer.hpp  place_recognition.hpp
src/: PlaceRecognizer.cpp  place_recognition.cpp
